--- a/src/components/languages/en/global.json
+++ b/src/components/languages/en/global.json
@@ -5,7 +5,7 @@
     },
     "aboutMe":{
         "title": "ABOUT ME",
-        "content": "My name is Alex Zorzin and I'm a Full-Stack web developer from Buenos Aires, Argentina. I'm interested in starting my career as a developer and I'm looking for opportunities in order to improve and learn actively in an innovative team. My goal is to work on exciting and challenging projects so I can apply my skills and knowledge in a practical way and keep learning constantly. I am passionate about the programming field and am willing to go the extra mile to be a valuable asset to any development team."
+        "content": "I am a Full-Stack developer and Computer Engineering student from Buenos Aires, Argentina. My interest in the world of programming stimulates me to seek opportunities to challenge myself and gain both knowledge and skills beyond my comfort zone in order to grow and improve, both personally and professionally. I consider myself an organized, motivated and dedicated person to find effective solutions to the challenges that arise in the future."
     },
     "projects":{
         "title": "PROJECTS"
