--- a/src/components/languages/es/global.json
+++ b/src/components/languages/es/global.json
@@ -5,7 +5,7 @@
     },
     "aboutMe":{
         "title": "SOBRE MÍ",
-        "content": "Soy un desarrollador Full-Stack y estudiante de Ingeniería en Informática de Buenos Aires, Argentina. Estoy interesado en todo el ámbito de la programación y me encuentro con ansias de trabajar en ambiciosos proyectos que requieran trabajar fuera de mi comodidad y conjunto de conocimientos. Me considero a mi mismo como una persona organizada, motivada y solucionadora de problemas, con alta atención a los detalles."
+        "content": "Soy un desarrollador Full-Stack y estudiante de Ingeniería Informática de Buenos Aires, Argentina. Mi interés en el mundo de la programación me impulsa a buscar oportunidades para desafiarme y obtener tanto conocimientos como habilidades mas allá de mis comodidades para crecer y mejorar, tanto a nivel personal como profesional. Me considero una persona organizada, motivada y dedicada a encontrar soluciones efectivas a los desafíos que se presentan."
     },
     "projects":{
         "title": "PROYECTOS"
